# ai_trade_system

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: watchlist.json
configs/: sample.toml
data/: a_share_stocks.csv
docs/: README.md  architecture.md  auto-sedimentation-skill.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
launchd/: com.jeevan.ai-trade-system.hourly-continue.plist
scripts/: capture_app_screenshots.mjs  download_sample.sh  hourly_continue_project.sh  openclaw_external_research.py  openclaw_notify_user.py  run_all.sh  run_api.sh  run_app.sh  run_backtest_sample.sh  run_frontend.sh  run_paper_sample.sh  run_web.sh
strategies/: README.md  my_strategy.py
tests/: test_agent_cli.py  test_agent_core.py  test_agent_governance.py  test_agent_mcp.py  test_agent_openclaw.py  test_agent_planner.py  test_agent_queue.py  test_agent_system_tools.py  test_analytics.py  test_api_routes.py  test_automation_radar.py  test_automation_scheduler.py  test_automation_service.py  test_automation_store.py  test_backtest_and_paper.py  test_builtin_popular_strategies.py  test_chan_multilevel_reversal_strategy.py  test_cli_stocks.py  test_data_manager.py  test_deepseek.py  test_indicators.py  test_llm.py  test_market_data.py  test_openclaw_external_research_script.py  test_paper_service.py  test_portfolio.py  test_realtime_monitor.py  test_realtime_sources.py  test_research_signals.py  test_risk.py  test_startup_scripts.py  test_stock_catalog.py  test_strategy_registry.py  test_web_app_import.py  (+2 more)
(+292 files in other folders)
