[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trade-system"
version = "0.1.0"
description = "Self-hosted A-share quant trading system scaffold with strategy, data, backtest, paper trading, and gateway extension points."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.27",
]

[project.optional-dependencies]
data = ["akshare>=1.14"]
vnpy = [
    "vnpy>=4.0",
    "vnpy_ctastrategy>=1.0",
]
dev = [
    "pytest>=8.0",
]
web = [
    "streamlit>=1.36",
    "plotly>=5.22",
]

[project.scripts]
ai-trade = "ai_trade_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
